GPII-153: Fixed the '+/-' alignment

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -48,6 +48,7 @@
     border: none;
     width: 200px;
     font-size: 23px;
+    display: inline;
 }
 
 #speechRateMinus {
